...

  const onSubmit = useCallback(async () => {
    setFormDisabled(true);

    const success = await authenticateUser(
      {
        display_name: formData.display_name || '',
        username: formData.username || '',
        email: formData.email || '',
        password: formData.password || '',
      },
      route.name,
    );

    setFormDisabled(false);

...
      navigation.navigate('Home');
    }
  }, [formData]);

  return (
    <ScrollView
      testID="register-screen"
      contentContainerStyle={{
        flexGrow: 1,
      }}>
      <Box flex={1} py="$2" px="$16" justifyContent="center">
        <Text mb="$6" fontSize="$xl" textAlign="center">
          Register
...
            py="$2"
            px="$6"
            borderRadius="$lg"
            onPress={onSubmit}
            bgColor="$secondary700"
            isDisabled={formDisabled}
            testID="submit-btn">
            <ButtonText fontFamily="$heading" fontWeight="$bold">
              REGISTER
            </ButtonText>
          </Button>
        </Box>

        <HStack justifyContent="center">
          <Pressable
            onPress={() => navigation.navigate('Login')}
            testID="login-btn">
            <Text color="$primary700">Login</Text>
          </Pressable>
          <Text>, if you already have an account</Text>
        </HStack>
      </Box>
    </ScrollView>
...
