...
              py="$2"
              px="$6"
              borderRadius="$sm"
              onPress={() => removeFromCart()}
              isDisabled={loading}
              bgColor="$secondary700"
              testID="remove-from-cart">
              <ButtonText fontFamily="$heading" fontWeight="$normal">
                REMOVE FROM CART
              </ButtonText>
            </Button>
          ) : (
            <HStack space="sm" justifyContent="space-between">
...
                  onPress={() => deductQuantity()}
                />
                <Text testID="quantity">
                  {selectedQuantity} of {product.quantity}
                </Text>
                <Ionicons
                  testID="increase-quantity"
                  name={'chevron-forward-outline'}
                  size={24}
                  color={config.tokens.colors.black}
                  onPress={() => addQuantity()}
                />
              </HStack>
...
                py="$2"
                px="$6"
                borderRadius="$sm"
                onPress={() => addToCart()}
                isDisabled={loading}
                bgColor="$secondary700"
                testID="add-to-cart">
                <ButtonText fontFamily="$heading" fontWeight="$normal">
                  ADD TO CART
                </ButtonText>
              </Button>
            </HStack>
          )}
...
