...
        py="$4">
        {!inBottomTabsScreen ? (
          <Ionicons
            name={'chevron-back-outline'}
            size={32}
            color={config.tokens.colors.black}
            testID="back-btn"
            style={{marginRight: 16}}
            onPress={() => {
              if (navigation.canGoBack()) {
                navigation.goBack();
              }
            }}
...
          </Text>
        ) : null}

        {inBottomTabsScreen ? (
          user ? (
            <Ionicons
              testID="logout-btn"
              name={'exit-outline'}
              size={32}
              color={config.tokens.colors.black}
              onPress={() => logOutUser()}
            />
          ) : (
...
