...
          refreshing={refreshing}
          onRefresh={onRefresh}
          colors={[config.tokens.colors.coolGray400]}
        />
      }
      data={products}
      testID="flat-list"
      ListHeaderComponent={() => {
        return (
          <Box mt="$6">
            {route.name === 'Products' && user ? (
              <Text fontSize="$md" mb="$2" testID="user-greeting">
                Welcome, {user?.display_name}!
              </Text>
            ) : null}
            <Heading
              fontFamily="$subheading"
              fontWeight="$normal"
...
      }}
      ListFooterComponent={() => (
        <Box justifyContent="center" mb="$6">
          {loading && !refreshing ? (
            <Spinner
              size="large"
              testID="fetching-spinner"
              color="$coolGray300"
            />
          ) : products.length < 1 ? (
            <Text textAlign="center" testID="no-data-text">
              No products found...
            </Text>
          ) : endOfDataList ? (
            <Text textAlign="center" testID="end-of-data-text">
              That's all for now!
            </Text>
          ) : null}
        </Box>
      )}
      keyExtractor={(item, index) => (item as Product)._id}
...
