...
          </Button>
        </Box>

        <HStack justifyContent="center">
          <Pressable
            onPress={() => navigation.navigate('Register')}
            testID="register-btn">
            <Text color="$primary700">Register</Text>
          </Pressable>
          <Text>, if you don't have an account</Text>
        </HStack>
      </Box>
    </ScrollView>
...
